--- a/res/lang/lang_es.txt
+++ b/res/lang/lang_es.txt
@@ -257,8 +257,8 @@ SCRIPT_POTENTIAL = Potencial
 
 PROGRAMME_GENRE_UNDEFINED = Varios
 PROGRAMME_GENRE_ADVENTURE = Adventura
-PROGRAMME_GENRE_ACTION = Acciñon
-PROGRAMME_GENRE_ANIMATION = Animatición
+PROGRAMME_GENRE_ACTION = Accion
+PROGRAMME_GENRE_ANIMATION = Animación
 PROGRAMME_GENRE_CRIME = Crimen
 PROGRAMME_GENRE_COMEDY = Comedia
 PROGRAMME_GENRE_DOCUMENTARY = Documental
@@ -290,7 +290,7 @@ PROGRAMME_GENRE_FEATURE_YELLOWPRESS= Prensa Amarilla
 PROGRAMME_FLAG_LIVE = Directo
 PROGRAMME_FLAG_ANIMATION = Animación
 PROGRAMME_FLAG_CULTURE = Cultura
-PROGRAMME_FLAG_CULT = Cult
+PROGRAMME_FLAG_CULT = Culto
 PROGRAMME_FLAG_TRASH = Trash
 PROGRAMME_FLAG_BMOVIE = BMovie
 PROGRAMME_FLAG_XRATED = XRated
@@ -500,7 +500,7 @@ OPTION_ON = Option selecionada
 OPTION_OFF = Option deseleccionada
 AVAILABLE_GAMES = Juegos disponibles
 ALREADY_OVER = Already over...?
-DO_YOU_REALLY_WANT_TO_QUIT = ¿De verdad quiere dejar de fumar?
+DO_YOU_REALLY_WANT_TO_QUIT = ¿De verdad quiere dejar de jugar?
 DO_YOU_REALLY_WANT_TO_QUIT_THE_GAME_AND_RETURN_TO_STARTSCREEN = ¿De verdad quieres salir del juego y volver a PantInicial?
 
 CONTINUE_GAME = Continuar juego
